[package]
name = "grn_simulator"
version = "0.0.1"
authors = ["korommatyi", "mkirilly", "hannagabor"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3" }
yaml-rust = { version = "0.4", git = "https://github.com/chyh1990/yaml-rust.git" }
rand = { version = "0.8" }
rand_chacha = { version = "0.3" }
